--- a/detail.html
+++ b/detail.html
@@ -150,11 +150,12 @@
         }
         // FirebaseUI config.
         var uiConfig = {
+            signInFlow: 'popup',
             signInOptions: [
                 // Leave the lines as is for the providers you want to offer your users.
                 firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-
-            ]
+            ],
+            signInSuccessUrl: './index.html'
         };
 
         const componentsToUpdate = document.querySelectorAll('[x-data]');
