--- a/detail.html
+++ b/detail.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div x-data="{ isLoggedIn: false }">
+    <div x-data="navbarData" x-init="init()">
         <div class="container mx-auto px-4">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
@@ -80,6 +80,9 @@
                 isLoggedIn: false,
 
                 async init() {
+                    this.$root.addEventListener('auth-change', (event) => {
+                        this.isLoggedIn = event.detail.isLoggedIn;
+                    });
 
                     if (!this.isLoggedIn)
                         window.location.href = './index.html';
