--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div x-data="c" x-init="init()">
+    <div x-data="navbarData" x-init="init()">
         <div class="container mx-auto px-4">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
@@ -187,6 +187,9 @@
                 isLoggedIn: false,
                 lastUpdated: '',
                 init() {
+                    this.$root.addEventListener('auth-change', (event) => {
+                        this.isLoggedIn = event.detail.isLoggedIn;
+                    });
                     if (this.isLoggedIn) {
                         this.fetchSystemsData().then(data => {
                             this.systems = data;
