--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
         // Listen for authentication state changes
         firebase.auth().onAuthStateChanged((user) => {
             const isLoggedIn = !!user;
+            console.log('auth change');
+            console.log(isLoggedIn);
             document.dispatchEvent(new CustomEvent('auth-change', {
                 detail: { isLoggedIn }
             }));
@@ -172,6 +174,9 @@
                 init() {
                     // Listen for the custom event
                     this.$root.addEventListener('auth-change', (event) => {
+                        console.log('auth change');
+                        console.log(this.isLoggedIn);
+                        console.log(event);
                         this.isLoggedIn = event.detail.isLoggedIn;
                     });
                 }
@@ -188,6 +193,9 @@
                 lastUpdated: '',
                 init() {
                     this.$root.addEventListener('auth-change', (event) => {
+                        console.log('auth change');
+                        console.log(this.isLoggedIn);
+                        console.log(event);
                         this.isLoggedIn = event.detail.isLoggedIn;
                     });
                     if (this.isLoggedIn) {
