update ui for consistency

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <button @click="listView = !listView" class="btn btn-info">
                             <span x-text="listView ? 'Grid View' : 'List View'"></span>
                         </button>
-                        <button @click="checkAllSystemsStatus()" class="btn btn-secondary">Refresh Data</button>
+                        <button @click="checkAllSystemsStatus()" class="btn btn-info">Refresh Data</button>
                         <!-- Display Last Updated Time -->
                         <div class="px-4 py-2">
                             <span>Last Updated: <span x-text="lastUpdated"></span></span>
