--- a/detail.html
+++ b/detail.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.3/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.7/dist/cdn.min.js"></script>
+    <script src="https://kit.fontawesome.com/a461c29f3d.js" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/6.1.0/firebase-ui-auth.js"></script>
@@ -38,18 +39,32 @@
 
     <div class="container mx-auto px-4">
         <div x-data="systemStatusApp" x-init="init()">
-            <h2 x-text="system.name"></h2>
-            <h2 x-text="system.status"></h2>
+            <div class="system-status">
+                <h2 class="system-name text-2xl font-bold mb-2">
+                    <i class="fas fa-signal mr-2"></i>
+                    <span x-text="system.name"></span>
+                </h2>
+                <h3 class="system-status text-lg font-semibold">
+                    <span x-text="system.status"
+                        :class="{'text-green-500': system.status === 'Online', 'text-red-500': system.status === 'Offline'}"></span>
+                    <i
+                        :class="{'fas fa-check-circle text-green-500': system.status === 'Online', 'fas fa-times-circle text-red-500': system.status === 'Offline'}"></i>
+                </h3>
+            </div>
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-gray-50">
                     <tr>
                         <th scope="col"
-                            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                            checks Name
+                            class="px-6 py-3 text-left text-sm font-bold text-blue-600 uppercase tracking-wider bg-gray-100 shadow">
+                            No.
                         </th>
                         <th scope="col"
-                            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                            Status
+                            class="px-6 py-3 text-left text-sm font-bold text-blue-600 uppercase tracking-wider bg-gray-100 shadow">
+                            Dependency Name
+                        </th>
+                        <th scope="col"
+                            class="px-6 py-3 text-left text-sm font-bold text-blue-600 uppercase tracking-wider bg-gray-100 shadow">
+                            <i class="fas fa-signal mr-2"></i> Status
                         </th>
                     </tr>
                 </thead>
@@ -177,7 +192,19 @@
             signInSuccessUrl: './index.html'
         };
 
-        const componentsToUpdate = document.querySelectorAll('[x-data]');
+        document.getElementById('logoutButton').addEventListener('click', function () {
+            const confirmLogout = confirm("Are you sure you want to logout?");
+            if (confirmLogout) {
+                firebase.auth().signOut().then(() => {
+                    console.log('User signed out successfully');
+                    sessionStorage.clear();
+                    window.location.href = './index.html';
+                }).catch((error) => {
+                    console.error('Sign Out Error', error);
+                    // Handle errors here, such as displaying a notification to the user
+                });
+            }
+        });
 
         // Listen for authentication state changes
         firebase.auth().onAuthStateChanged((user) => {
