--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
                                         <h2 class="card-title" x-text="system.name"></h2>
                                         <p>Status: <span x-text="system.status"></span></p>
                                         <div class="card-actions justify-end">
-                                            <button class="btn btn-primary"
+                                            <button class="btn btn-sm btn-outline btn-primary"
                                                 @click="goToDetailPage(system.name)">Details</button>
                                         </div>
                                     </div>
