--- a/public/detail.html
+++ b/public/detail.html
@@ -15,205 +15,228 @@
 </head>
 
 <body>
-    <div x-data="navbarData" x-init="init()">
-        <div class="container mx-auto px-4">
-            <div class="navbar bg-base-100">
-                <div class="navbar-start">
-                    <a href="./index.html" class="btn btn-sm btn-ghost">
-                        <i class="fas fa-leaf mr-2" aria-hidden="true"></i>
-                        <span class="sr-only">Dashboard</span> cdn-fb-hcapp
-                    </a>
-                </div>
-                <div class="navbar-end">
-                    <div x-show="isLoggedIn">
-                        <a id="logoutButton" class="btn btn-sm btn-outline btn-error hover:bg-red-700 hover:text-white">
-                            <i class="fas fa-sign-out-alt mr-2" aria-hidden="true"></i>
-                            <span class="sr-only">Logout</span> Logout
+
+    <div x-data="{ isLoggedIn: false }" x-init="isLoggedIn = sessionStorage.getItem('isLoggedIn') === 'true'">
+        <!-- Section shown only when the user is not logged in -->
+        <div x-show="!isLoggedIn">
+            <div class="container mx-auto px-4">
+                <div class="navbar bg-base-100">
+                    <div class="navbar-start">
+                        <a href="./index.html" class="btn btn-sm btn-ghost">
+                            <i class="fas fa-leaf mr-2" aria-hidden="true"></i>
+                            <span class="sr-only">Dashboard</span> cdn-fb-hcapp
                         </a>
+                    </div>
+                    <div class="navbar-end">
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="divider py-0 my-0"></div>
-
-    <div class="container mx-auto px-4">
-        <div x-data="systemStatusApp" x-init="init()">
-            <div class="system-status">
-                <h2 class="system-name text-2xl font-bold mb-2">
-                    <i class="fas fa-signal mr-2"></i>
-                    <span x-text="system.name"></span>
-                </h2>
-                <h3 class="system-status text-lg font-semibold">
-                    <span x-text="system.status"
-                        :class="{'text-green-500': system.status === 'Online', 'text-red-500': system.status === 'Offline'}"></span>
-                    <i
-                        :class="{'fas fa-check-circle text-green-500': system.status === 'Online', 'fas fa-times-circle text-red-500': system.status === 'Offline'}"></i>
-                </h3>
+            <div class="text-center">
+                <h2 class="mb-4 text-3xl font-bold">You are not logged in</h2>
+                <a href="./index.html" class="btn btn-primary btn-outline hover:bg-blue-700 hover:text-white text-lg">
+                    <i class="fas fa-sign-in-alt mr-2"></i>Go to Home to Login
+                </a>
             </div>
-            <table class="min-w-full divide-y divide-gray-200">
-                <thead class="bg-gray-50">
-                    <tr>
-                        <th scope="col"
-                            class="px-6 py-3 text-left text-sm font-bold text-blue-600 uppercase tracking-wider bg-gray-100 shadow">
-                            No.
-                        </th>
-                        <th scope="col"
-                            class="px-6 py-3 text-left text-sm font-bold text-blue-600 uppercase tracking-wider bg-gray-100 shadow">
-                            Dependency Name
-                        </th>
-                        <th scope="col"
-                            class="px-6 py-3 text-left text-sm font-bold text-blue-600 uppercase tracking-wider bg-gray-100 shadow">
-                            <i class="fas fa-signal mr-2"></i> Status
-                        </th>
-                    </tr>
-                </thead>
-                <tbody class="bg-white divide-y divide-gray-200" x-html="tableContent">
-                    <!-- Rows will be inserted here by Alpine.js -->
-                </tbody>
-            </table>
         </div>
-    </div>
+        <div x-show="isLoggedIn">
+            <div x-data="navbarData" x-init="init()">
+                <div class="container mx-auto px-4">
+                    <div class="navbar bg-base-100">
+                        <div class="navbar-start">
+                            <a href="./index.html" class="btn btn-sm btn-ghost">
+                                <i class="fas fa-leaf mr-2" aria-hidden="true"></i>
+                                <span class="sr-only">Dashboard</span> cdn-fb-hcapp
+                            </a>
+                        </div>
+                        <div class="navbar-end">
+                            <a id="logoutButton"
+                                class="btn btn-sm btn-outline btn-error hover:bg-red-700 hover:text-white">
+                                <i class="fas fa-sign-out-alt mr-2" aria-hidden="true"></i>
+                                <span class="sr-only">Logout</span> Logout
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="divider py-0 my-0"></div>
 
-    <script>
-        document.addEventListener('alpine:init', () => {
+            <div class="container mx-auto px-4">
+                <div x-data="systemStatusApp" x-init="init()">
+                    <div class="system-status">
+                        <h2 class="system-name text-2xl font-bold mb-2">
+                            <i class="fas fa-signal mr-2"></i>
+                            <span x-text="system.name"></span>
+                        </h2>
+                        <h3 class="system-status text-lg font-semibold">
+                            <span x-text="system.status"
+                                :class="{'text-green-500': system.status === 'Online', 'text-red-500': system.status === 'Offline'}"></span>
+                            <i
+                                :class="{'fas fa-check-circle text-green-500': system.status === 'Online', 'fas fa-times-circle text-red-500': system.status === 'Offline'}"></i>
+                        </h3>
+                    </div>
+                    <table class="min-w-full divide-y divide-gray-200">
+                        <thead class="bg-gray-50">
+                            <tr>
+                                <th scope="col"
+                                    class="px-6 py-3 text-left text-sm font-bold text-blue-600 uppercase tracking-wider bg-gray-100 shadow">
+                                    No.
+                                </th>
+                                <th scope="col"
+                                    class="px-6 py-3 text-left text-sm font-bold text-blue-600 uppercase tracking-wider bg-gray-100 shadow">
+                                    Dependency Name
+                                </th>
+                                <th scope="col"
+                                    class="px-6 py-3 text-left text-sm font-bold text-blue-600 uppercase tracking-wider bg-gray-100 shadow">
+                                    <i class="fas fa-signal mr-2"></i> Status
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody class="bg-white divide-y divide-gray-200" x-html="tableContent">
+                            <!-- Rows will be inserted here by Alpine.js -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
 
-            Alpine.data('navbarData', () => ({
-                isLoggedIn: false,
-                init() {
-                    // Listen for the custom event
-                    this.isLoggedIn = sessionStorage.getItem('isLoggedIn') === 'true';
-                    this.$root.addEventListener('auth-change', (event) => {
-                        this.isLoggedIn = event.detail.isLoggedIn;
-                        sessionStorage.setItem('isLoggedIn', isLoggedIn);
-                    });
-                }
-            }));
+        <script>
+            document.addEventListener('alpine:init', () => {
 
-            Alpine.data('systemStatusApp', () => ({
-                tableContent: '',
-                system: '{}',
-                initialized: false,
-                isLoggedIn: false,
-
-                async init() {
-                    this.isLoggedIn = sessionStorage.getItem('isLoggedIn') === 'true';
-                    this.$root.addEventListener('auth-change', (event) => {
-                        this.isLoggedIn = event.detail.isLoggedIn;
-                        sessionStorage.setItem('isLoggedIn', isLoggedIn);
-                    });
-
-                    if (!this.isLoggedIn)
-                        window.location.href = './index.html';
-                    if (this.initialized) return;
-
-                    this.tableContent = '';
-                    this.initialized = true;
-                    const systemName = sessionStorage.getItem('systemName');
-                    const systems = await this.fetchSystemsData();
-                    const system = systems.find(s => s.name === systemName);
-
-                    if (system) {
-                        this.system = system;
-                        await this.checkSystemStatus(system);
+                Alpine.data('navbarData', () => ({
+                    isLoggedIn: false,
+                    init() {
+                        // Listen for the custom event
+                        this.isLoggedIn = sessionStorage.getItem('isLoggedIn') === 'true';
+                        this.$root.addEventListener('auth-change', (event) => {
+                            this.isLoggedIn = event.detail.isLoggedIn;
+                            sessionStorage.setItem('isLoggedIn', isLoggedIn);
+                        });
                     }
-                },
-                async fetchSystemsData() {
-                    try {
-                        const response = await fetch('./systems.json');
-                        if (!response.ok) {
-                            throw new Error(`HTTP error! status: ${response.status}`);
+                }));
+
+                Alpine.data('systemStatusApp', () => ({
+                    tableContent: '',
+                    system: '{}',
+                    initialized: false,
+                    isLoggedIn: false,
+
+                    async init() {
+                        this.isLoggedIn = sessionStorage.getItem('isLoggedIn') === 'true';
+                        this.$root.addEventListener('auth-change', (event) => {
+                            this.isLoggedIn = event.detail.isLoggedIn;
+                            sessionStorage.setItem('isLoggedIn', isLoggedIn);
+                        });
+
+                        if (!this.isLoggedIn) return;
+                        if (this.initialized) return;
+
+                        this.tableContent = '';
+                        this.initialized = true;
+                        const systemName = sessionStorage.getItem('systemName');
+                        const systems = await this.fetchSystemsData();
+                        const system = systems.find(s => s.name === systemName);
+
+                        if (system) {
+                            this.system = system;
+                            await this.checkSystemStatus(system);
                         }
-                        const data = await response.json();
-                        this.lastUpdated = new Date().toLocaleString();
-                        return data;
-                    } catch (error) {
-                        console.error('There has been a problem with your fetch operation:', error);
-                        return [];
-                    }
-                },
-                async checkSystemStatus(system) {
-                    let isAnyCheckOffline = false; // Flag to track if any check is offline
-                    this.tableContent = '';
-                    for (const check of system.checks) {
+                    },
+                    async fetchSystemsData() {
                         try {
-                            const response = await fetch(check.url);
+                            const response = await fetch('./systems.json');
                             if (!response.ok) {
-                                // If the response status is not OK, mark the check as offline
+                                throw new Error(`HTTP error! status: ${response.status}`);
+                            }
+                            const data = await response.json();
+                            this.lastUpdated = new Date().toLocaleString();
+                            return data;
+                        } catch (error) {
+                            console.error('There has been a problem with your fetch operation:', error);
+                            return [];
+                        }
+                    },
+                    async checkSystemStatus(system) {
+                        let isAnyCheckOffline = false; // Flag to track if any check is offline
+                        this.tableContent = '';
+                        for (const check of system.checks) {
+                            try {
+                                const response = await fetch(check.url);
+                                if (!response.ok) {
+                                    // If the response status is not OK, mark the check as offline
+                                    check.status = 'Offline';
+                                    isAnyCheckOffline = true;
+                                } else {
+                                    // If the response status is OK, mark the check as online
+                                    check.status = 'Online';
+                                }
+                            } catch (error) {
+                                console.error(`Error fetching ${check.url}:`, error);
                                 check.status = 'Offline';
                                 isAnyCheckOffline = true;
-                            } else {
-                                // If the response status is OK, mark the check as online
-                                check.status = 'Online';
                             }
-                        } catch (error) {
-                            console.error(`Error fetching ${check.url}:`, error);
-                            check.status = 'Offline';
-                            isAnyCheckOffline = true;
                         }
-                    }
-                    // Update system status based on the checks
-                    system.status = isAnyCheckOffline ? 'Offline' : 'Online';
-                    // Now, update the table with all checks
-                    system.checks.forEach(check => {
-                        this.updateTable(check.name, check.status);
-                    });
-                },
+                        // Update system status based on the checks
+                        system.status = isAnyCheckOffline ? 'Offline' : 'Online';
+                        // Now, update the table with all checks
+                        system.checks.forEach(check => {
+                            this.updateTable(check.name, check.status);
+                        });
+                    },
 
-                updateTable(checkName, status) {
-                    this.rowCounter = (this.rowCounter || 0) + 1;
-                    this.tableContent += `<tr>
+                    updateTable(checkName, status) {
+                        this.rowCounter = (this.rowCounter || 0) + 1;
+                        this.tableContent += `<tr>
         <td class="px-6 py-4 whitespace-nowrap">${this.rowCounter}</td>
         <td class="px-6 py-4 whitespace-nowrap">${checkName}</td>
         <td class="px-6 py-4 whitespace-nowrap">${status}</td>
     </tr>`;
-                }
-            }));
-        });
+                    }
+                }));
+            });
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyBe5yNOc1hTU17m0AV7rGVLyv-rq02QjAM",
-            authDomain: "cdn-fb-hcapp.firebaseapp.com",
-            projectId: "cdn-fb-hcapp",
-            storageBucket: "cdn-fb-hcapp.appspot.com",
-            messagingSenderId: "658365079712",
-            appId: "1:658365079712:web:59bc12b00767c867d269c5"
-        };
-        if (!firebase.apps.length) {
-            firebase.initializeApp(firebaseConfig);
-        }
-        // FirebaseUI config.
-        var uiConfig = {
-            signInFlow: 'popup',
-            signInOptions: [
-                // Leave the lines as is for the providers you want to offer your users.
-                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-            ],
-            signInSuccessUrl: './index.html'
-        };
-
-        document.getElementById('logoutButton').addEventListener('click', function () {
-            const confirmLogout = confirm("Are you sure you want to logout?");
-            if (confirmLogout) {
-                firebase.auth().signOut().then(() => {
-                    console.log('User signed out successfully');
-                    sessionStorage.clear();
-                    window.location.href = './index.html';
-                }).catch((error) => {
-                    console.error('Sign Out Error', error);
-                    // Handle errors here, such as displaying a notification to the user
-                });
+            const firebaseConfig = {
+                apiKey: "AIzaSyBe5yNOc1hTU17m0AV7rGVLyv-rq02QjAM",
+                authDomain: "cdn-fb-hcapp.firebaseapp.com",
+                projectId: "cdn-fb-hcapp",
+                storageBucket: "cdn-fb-hcapp.appspot.com",
+                messagingSenderId: "658365079712",
+                appId: "1:658365079712:web:59bc12b00767c867d269c5"
+            };
+            if (!firebase.apps.length) {
+                firebase.initializeApp(firebaseConfig);
             }
-        });
+            // FirebaseUI config.
+            var uiConfig = {
+                signInFlow: 'popup',
+                signInOptions: [
+                    // Leave the lines as is for the providers you want to offer your users.
+                    firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                ],
+                signInSuccessUrl: './index.html'
+            };
 
-        // Listen for authentication state changes
-        firebase.auth().onAuthStateChanged((user) => {
-            const isLoggedIn = !!user;
-            document.dispatchEvent(new CustomEvent('auth-change', {
-                detail: { isLoggedIn }
-            }));
-        });
-    </script>
+            document.getElementById('logoutButton').addEventListener('click', function () {
+                const confirmLogout = confirm("Are you sure you want to logout?");
+                if (confirmLogout) {
+                    firebase.auth().signOut().then(() => {
+                        console.log('User signed out successfully');
+                        sessionStorage.clear();
+                        window.location.href = './index.html';
+                    }).catch((error) => {
+                        console.error('Sign Out Error', error);
+                        // Handle errors here, such as displaying a notification to the user
+                    });
+                }
+            });
+
+            // Listen for authentication state changes
+            firebase.auth().onAuthStateChanged((user) => {
+                const isLoggedIn = !!user;
+                document.dispatchEvent(new CustomEvent('auth-change', {
+                    detail: { isLoggedIn }
+                }));
+            });
+        </script>
 
 </body>
 
